add config auto update
add config auto update
allow dhizuku start service when boot completed

--- a/dhizuku-aidl/build.gradle
+++ b/dhizuku-aidl/build.gradle
@@ -3,6 +3,7 @@ plugins {
 }
 
 android {
+    namespace 'com.rosan.dhizuku.aidl'
     compileSdkVersion 33
 
     defaultConfig {
@@ -11,7 +12,7 @@ android {
     }
 
     buildFeatures {
-        buildConfig false
+        aidl true
     }
 
     compileOptions {
