Delete double quot

--- a/keystore/r0s.properties
+++ b/keystore/r0s.properties
@@ -1,4 +1,4 @@
-keyAlias="android"
-keyPassword="android"
-storeFile="android.jks"
-storePassword="android"
+keyAlias=android
+keyPassword=android
+storeFile=android.jks
+storePassword=android
