--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -7,34 +7,39 @@
 # Maven
 # https://mvnrepository.com/
 
+# Compose Compiler Maven
+# https://androidx.dev/storage/compose-compiler/repository/
+
 [versions]
 agp = "8.4.0"
-kotlin = "1.9.22"
-compose-compiler = "1.5.8"
-compose = "1.5.4"
+kotlin = "1.9.24"
+# https://developer.android.com/jetpack/androidx/releases/compose-kotlin
+compose-compiler = "1.5.14-dev-k1.9.24-50022def4af"
+compose = "1.6.7"
 room = "2.6.1"
-accompanist = "0.32.0"
+accompanist = "0.34.0"
 rikka-shizuku = "13.1.5"
+koin = "3.5.6"
 
 [plugins]
 agp-lib = { id = "com.android.library", version.ref = "agp" }
 agp-app = { id = "com.android.application", version.ref = "agp" }
 kotlin = { id = "org.jetbrains.kotlin.android", version.ref = "kotlin" }
 kotlin-jvm = { id = "org.jetbrains.kotlin.jvm", version.ref = "kotlin" }
-ksp = { id = "com.google.devtools.ksp", version = "1.9.22-1.0.17" }
+ksp = { id = "com.google.devtools.ksp", version = "1.9.24-1.0.20" }
 
 [libraries]
 androidx-annotation = { module = "androidx.annotation:annotation", version = "1.7.1" }
-androidx-core = { group = "androidx.core", name = "core-ktx", version = "1.12.0" }
-androidx-activity-compose = { group = "androidx.activity", name = "activity-compose", version = "1.8.2" }
+androidx-core = { group = "androidx.core", name = "core-ktx", version = "1.13.1" }
+androidx-activity-compose = { group = "androidx.activity", name = "activity-compose", version = "1.9.0" }
 androidx-lifecycle = { group = "androidx.lifecycle", name = "lifecycle-runtime-ktx", version = "2.7.0" }
 compose-ui = { group = "androidx.compose.ui", name = "ui", version.ref = "compose" }
 compose-material = { group = "androidx.compose.material", name = "material", version.ref = "compose" }
-compose-material3 = { group = "androidx.compose.material3", name = "material3", version = "1.1.2" }
-compose-uiToolingPreview = { group = "androidx.compose.ui", name = "ui-tooling-preview", version.ref = "compose" }
+compose-material3 = { group = "androidx.compose.material3", name = "material3", version = "1.2.1" }
+compose-uiToolingPreview = { group = "androidx.compose.ui", name = "ui-tooling", version.ref = "compose" }
 
-compose-navigation = { group = "androidx.navigation", name = "navigation-compose", version = "2.7.6" }
-compose-materialIcons = { group = "androidx.compose.material", name = "material-icons-extended", version = "1.5.4" }
+compose-navigation = { group = "androidx.navigation", name = "navigation-compose", version = "2.7.7" }
+compose-materialIcons = { group = "androidx.compose.material", name = "material-icons-extended", version = "1.6.7" }
 
 room-runtime = { group = "androidx.room", name = "room-runtime", version.ref = "room" }
 room-compiler = { group = "androidx.room", name = "room-compiler", version.ref = "room" }
@@ -42,13 +47,13 @@ room-ktx = { group = "androidx.room", name = "room-ktx", version.ref = "room" }
 
 # Koin Inject
 # https://insert-koin.io/docs/setup/koin
-koin-core = { group = "io.insert-koin", name = "koin-core", version = "3.4.2" }
-koin-android = { group = "io.insert-koin", name = "koin-android", version = "3.5.0" }
-koin-compose = { group = "io.insert-koin", name = "koin-androidx-compose", version = "3.5.0" }
+koin-core = { group = "io.insert-koin", name = "koin-core", version.ref = "koin" }
+koin-android = { group = "io.insert-koin", name = "koin-android", version.ref = "koin" }
+koin-compose = { group = "io.insert-koin", name = "koin-androidx-compose", version.ref = "koin" }
 
 # Lottie for Android Compose
 # http://airbnb.io/lottie/#/android-compose
-lottie-compose = { group = "com.airbnb.android", name = "lottie-compose", version = "6.2.0" }
+lottie-compose = { group = "com.airbnb.android", name = "lottie-compose", version = "6.4.0" }
 
 # Pager layouts
 # https://google.github.io/accompanist/pager/
@@ -73,4 +78,4 @@ rikka-shizuku-provider = { group = "dev.rikka.shizuku", name = "provider", versi
 
 # Android app_process
 # https://github.com/iamr0s/AndroidAppProcess
-iamr0s-androidAppProcess = { group = "io.github.iamr0s", name = "AndroidAppProcess", version = "1.3.1" }
+iamr0s-androidAppProcess = { group = "io.github.iamr0s", name = "AndroidAppProcess", version = "1.3.2" }
