--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -39,6 +39,7 @@ compose-ui = { group = "androidx.compose.ui", name = "ui", version.ref = "compos
 compose-material = { group = "androidx.compose.material", name = "material", version.ref = "compose" }
 compose-material3 = { group = "androidx.compose.material3", name = "material3", version = "1.3.0-beta05" }
 compose-uiToolingPreview = { group = "androidx.compose.ui", name = "ui-tooling", version.ref = "compose" }
+material = { group = "com.google.android.material", name = "material", version = "1.13.0-alpha05" }
 
 compose-navigation = { group = "androidx.navigation", name = "navigation-compose", version = "2.7.7" }
 compose-materialIcons = { group = "androidx.compose.material", name = "material-icons-extended", version.ref = "compose" }
