--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -69,11 +69,7 @@
             android:directBootAware="true"
             android:exported="false"
             android:foregroundServiceType="remoteMessaging"
-            tools:ignore="UnusedAttribute">
-            <intent-filter>
-                <action android:name="android.intent.action.BOOT_COMPLETED" />
-            </intent-filter>
-        </service>
+            tools:ignore="UnusedAttribute" />
 
         <receiver
             android:name=".server.DhizukuDAReceiver"
