--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -11,9 +11,9 @@
 # https://androidx.dev/storage/compose-compiler/repository/
 
 [versions]
-agp = "8.5.2"
+agp = "8.6.1"
 kotlin = "2.0.0"
-compose = "1.7.0-beta07"
+compose = "1.7.3"
 room = "2.6.1"
 accompanist = "0.34.0"
 rikka-shizuku = "13.1.5"
@@ -33,14 +33,14 @@ ksp = { id = "com.google.devtools.ksp", version = "2.0.0-1.0.23" }
 [libraries]
 androidx-annotation = { module = "androidx.annotation:annotation", version = "1.8.2" }
 androidx-core = { group = "androidx.core", name = "core-ktx", version = "1.13.1" }
-androidx-activity-compose = { group = "androidx.activity", name = "activity-compose", version = "1.9.1" }
-androidx-lifecycle = { group = "androidx.lifecycle", name = "lifecycle-runtime-ktx", version = "2.8.4" }
+androidx-activity-compose = { group = "androidx.activity", name = "activity-compose", version = "1.9.2" }
+androidx-lifecycle = { group = "androidx.lifecycle", name = "lifecycle-runtime-ktx", version = "2.8.6" }
 compose-ui = { group = "androidx.compose.ui", name = "ui", version.ref = "compose" }
 compose-material = { group = "androidx.compose.material", name = "material", version.ref = "compose" }
-compose-material3 = { group = "androidx.compose.material3", name = "material3", version = "1.3.0-beta05" }
+compose-material3 = { group = "androidx.compose.material3", name = "material3", version = "1.3.0" }
 compose-uiToolingPreview = { group = "androidx.compose.ui", name = "ui-tooling", version.ref = "compose" }
 
-compose-navigation = { group = "androidx.navigation", name = "navigation-compose", version = "2.7.7" }
+compose-navigation = { group = "androidx.navigation", name = "navigation-compose", version = "2.8.2" }
 compose-materialIcons = { group = "androidx.compose.material", name = "material-icons-extended", version.ref = "compose" }
 
 room-runtime = { group = "androidx.room", name = "room-runtime", version.ref = "room" }
