--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,49 +1,45 @@
 name: Build
 
 on:
-  workflow_dispatch:
   push:
     paths-ignore:
       - docs/**
       - LICENSE
-    branches: main
   pull_request:
-    branches: main
+  workflow_dispatch:
 
 jobs:
   build:
     name: Build
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-24.04
     steps:
 
       - name: Checkout
         uses: actions/checkout@v4
-        with:
-          submodules: recursive
 
       - uses: actions/setup-java@v4
         with:
           distribution: 'temurin'
-          java-version: '17'
+          java-version: 21
 
       - name: Setup Gradle
-        uses: gradle/actions/setup-gradle@v3
+        uses: gradle/actions/setup-gradle@v4
 
-      - name: Build with Gradle
+      - name: Set environments
         run: |
-          ./gradlew assembleRelease bundleRelease --stacktrace
           {
+            echo "repo=$(echo ${GITHUB_REPOSITORY#$GITHUB_REPOSITORY_OWNER/})"
             echo "version=v$(grep versionName version.properties | sed 's/^[^=]*=//')"
             echo "commit=$(echo ${{ github.sha }} | cut -c-7)"
           } >> $GITHUB_ENV
 
-      - name: Copy built artifacts
+      - name: Build
         run: |
-          cp -v app/build/outputs/apk/release/app-release.apk Dhizuku-${{ env.version }}.apk
-          cp -v app/build/outputs/bundle/release/app-release.aab Dhizuku-${{ env.version }}.aab
+          ./gradlew assembleDebug
+          cp -f app/build/outputs/apk/debug/app-debug.apk ${{ env.repo }}-${{ env.version }}@${{ env.commit }}.apk
 
       - name: Upload
         uses: actions/upload-artifact@v4
         with:
-          name: Dhizuku(${{ env.version }}@${{ env.commit }})
-          path: Dhizuku-${{ env.version }}.a*
+          name: ${{ env.repo }}-${{ env.version }}@${{ env.commit }}
+          path: ${{ env.repo }}-${{ env.version }}@${{ env.commit }}.apk
