--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -4,7 +4,7 @@
 
     <permission
         android:name="com.rosan.dhizuku.permission.API"
-        android:description="@string/permission_name"
+        android:description="@string/permission_description"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:protectionLevel="dangerous" />
@@ -33,6 +33,7 @@
         android:persistent="true"
         android:requestLegacyExternalStorage="true"
         android:roundIcon="@mipmap/ic_launcher_round"
+        android:supportsRtl="true"
         android:theme="@style/Theme.Dhizuku">
 
         <activity
