--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools">
+    xmlns:tools="http://schemas.android.com/tools"
+    tools:ignore="ExportedContentProvider,UnusedAttribute,ScopedStorage,QueryAllPackagesPermission">
 
     <permission
         android:name="com.rosan.dhizuku.permission.API"
@@ -9,20 +10,19 @@
         android:label="@string/app_name"
         android:protectionLevel="dangerous" />
 
-    <uses-permission android:name="com.rosan.dhizuku.permission.API" />
-    <uses-permission android:name="android.permission.POST_NOTIFICATIONS" />
     <uses-permission android:name="android.permission.FOREGROUND_SERVICE" />
-    <uses-permission android:name="android.permission.RECEIVE_BOOT_COMPLETED" />
-    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
-    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
-    <uses-permission
-        android:name="android.permission.MANAGE_EXTERNAL_STORAGE"
-        tools:ignore="ScopedStorage" />
-    <uses-permission
-        android:name="android.permission.QUERY_ALL_PACKAGES"
-        tools:ignore="QueryAllPackagesPermission" />
     <uses-permission android:name="android.permission.FOREGROUND_SERVICE_REMOTE_MESSAGING" />
-
+    <uses-permission android:name="android.permission.GET_ACCOUNTS" />
+    <uses-permission android:name="android.permission.MANAGE_ACCOUNTS" />
+    <uses-permission android:name="android.permission.MANAGE_EXTERNAL_STORAGE" />
+    <uses-permission android:name="android.permission.POST_NOTIFICATIONS" />
+    <uses-permission android:name="android.permission.QUERY_ALL_PACKAGES" />
+    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
+    <uses-permission android:name="android.permission.RECEIVE_BOOT_COMPLETED" />
+    <uses-permission android:name="android.permission.REQUEST_PASSWORD_COMPLEXITY" />
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
+    <uses-permission android:name="com.rosan.dhizuku.permission.API" />
+    
     <uses-sdk tools:overrideLibrary="rikka.shizuku.api, rikka.shizuku.provider, rikka.shizuku.shared, rikka.shizuku.aidl" />
 
     <application
@@ -83,8 +83,7 @@
             android:authorities="${applicationId}.dhizuku_server.provider;${applicationId}.server.provider"
             android:directBootAware="true"
             android:enabled="true"
-            android:exported="true"
-            tools:ignore="ExportedContentProvider,UnusedAttribute">
+            android:exported="true">
             <intent-filter>
                 <action android:name="com.rosan.dhizuku.server.provider" />
             </intent-filter>
@@ -94,8 +93,7 @@
             android:name=".server.RunningService"
             android:directBootAware="true"
             android:exported="false"
-            android:foregroundServiceType="remoteMessaging"
-            tools:ignore="UnusedAttribute" />
+            android:foregroundServiceType="remoteMessaging" />
 
         <receiver
             android:name=".server.DhizukuDAReceiver"
@@ -115,8 +113,7 @@
             android:name=".server.BootCompleteReceiver"
             android:directBootAware="true"
             android:enabled="true"
-            android:exported="true"
-            tools:ignore="UnusedAttribute">
+            android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.LOCKED_BOOT_COMPLETED" />
                 <action android:name="android.intent.action.BOOT_COMPLETED" />
