--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -13,8 +13,8 @@
 [versions]
 agp = "8.9.2"
 kotlin = "2.1.20"
-compose = "1.7.8"
-room = "2.6.1"
+compose = "1.8.0"
+room = "2.7.1"
 accompanist = "0.36.0"
 rikka-shizuku = "13.1.5"
 koin = "4.0.2"
@@ -33,15 +33,15 @@ ksp = { id = "com.google.devtools.ksp", version = "2.1.20-1.0.31" }
 
 [libraries]
 androidx-annotation = { module = "androidx.annotation:annotation", version = "1.9.1" }
-androidx-core = { group = "androidx.core", name = "core-ktx", version = "1.15.0" }
+androidx-core = { group = "androidx.core", name = "core-ktx", version = "1.16.0" }
 androidx-lifecycle = { group = "androidx.lifecycle", name = "lifecycle-runtime-ktx", version = "2.8.7" }
 androidx-activity-compose = { group = "androidx.activity", name = "activity-compose", version = "1.10.1" }
 
 compose-ui = { group = "androidx.compose.ui", name = "ui", version.ref = "compose" }
 compose-ui-tooling = { group = "androidx.compose.ui", name = "ui-tooling", version.ref = "compose" }
 compose-navigation = { group = "androidx.navigation", name = "navigation-compose", version = "2.8.9" }
-compose-materialIcons = { group = "androidx.compose.material", name = "material-icons-extended", version.ref = "compose" }
-compose-material3 = { group = "androidx.compose.material3", name = "material3", version = "1.3.1" }
+compose-materialIcons = { group = "androidx.compose.material", name = "material-icons-extended", version = "1.7.8" }
+compose-material3 = { group = "androidx.compose.material3", name = "material3", version = "1.3.2" }
 
 room-runtime = { group = "androidx.room", name = "room-runtime", version.ref = "room" }
 room-compiler = { group = "androidx.room", name = "room-compiler", version.ref = "room" }
