--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -6,7 +6,7 @@
     <permission
         android:name="com.rosan.dhizuku.permission.API"
         android:description="@string/permission_description"
-        android:icon="@mipmap/ic_launcher"
+        android:icon="@drawable/ic_launcher_foreground"
         android:label="@string/app_name"
         android:protectionLevel="dangerous" />
 
