--- a/gradle.properties
+++ b/gradle.properties
@@ -10,12 +10,13 @@ org.gradle.jvmargs=-Xmx2048m -Duser.language=en -Dconsole.encoding=UTF-8 -Dfile.
 # When configured, Gradle will run in incubating parallel mode.
 # This option should only be used with decoupled projects. More details, visit
 # http://www.gradle.org/docs/current/userguide/multi_project_builds.html#sec:decoupled_projects
-# org.gradle.parallel=true
+org.gradle.parallel=true
+org.gradle.configuration-cache=true
 # AndroidX package structure to make it clearer which packages are bundled with the
 # Android operating system, and which are packaged with your app"s APK
-# https://developer.android.com/topic/libraries/support-library/androidx-rn
+# https://developer.android.com/jetpack/androidx/versions
 android.useAndroidX=true
-android.enableJetifier=true
+#android.enableJetifier=true
 # Kotlin code style for this project: "official" or "obsolete":
 kotlin.code.style=official
 # Enables namespacing of each library's R class so that its R class includes only the
@@ -23,3 +24,4 @@ kotlin.code.style=official
 # thereby reducing the size of the R class for that library
 android.nonTransitiveRClass=true
 android.injected.testOnly=false
+android.enableR8.fullMode=true
