--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -41,6 +41,7 @@ compose-ui = { group = "androidx.compose.ui", name = "ui", version.ref = "compos
 compose-ui-tooling = { group = "androidx.compose.ui", name = "ui-tooling", version.ref = "compose" }
 compose-navigation = { group = "androidx.navigation", name = "navigation-compose", version = "2.9.0" }
 compose-materialIcons = { group = "androidx.compose.material", name = "material-icons-extended", version = "1.7.8" }
+material = { group = "com.google.android.material", name = "material", version = "1.12.0" }
 compose-material3 = { group = "androidx.compose.material3", name = "material3", version = "1.3.2" }
 
 room-runtime = { group = "androidx.room", name = "room-runtime", version.ref = "room" }
