--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -145,6 +145,16 @@
             </intent-filter>
         </receiver>
 
+        <receiver
+            android:name=".server.ShutdownReceiver"
+            android:enabled="true"
+            android:exported="true"
+            android:permission="com.rosan.dhizuku.permission.API">
+            <intent-filter>
+                <action android:name="com.rosan.dhizuku.action.SHUTDOWN" />
+            </intent-filter>
+        </receiver>
+
         <provider
             android:name="rikka.shizuku.ShizukuProvider"
             android:authorities="${applicationId}.shizuku"
