--- a/.github/ISSUE_TEMPLATE/feedback.yml
+++ b/.github/ISSUE_TEMPLATE/feedback.yml
@@ -12,6 +12,9 @@ body:
       
       And, please be patient as rushing the admins will not help resolve the issue.  
       The admins are looking at the issue.
+      
+      Please make sure to write in English!  
+      Otherwise, the maintainers may not be able to respond properly.
 - type: textarea
   attributes:
     label: Your opinion
